Bug 191472 - korganizer crashes when a remote ical url is invalid
Summary: korganizer crashes when a remote ical url is invalid
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.2
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-03 14:51 UTC by 20120808_bugs.kde.org
Modified: 2009-05-31 11:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
event ical provided by lastfm (2.80 KB, text/calendar)
2009-05-03 23:27 UTC, 20120808_bugs.kde.org
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 20120808_bugs.kde.org 2009-05-03 14:51:36 UTC
Version:           4.2.2 (using 4.2.2 (KDE 4.2.2), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.28-11-generic

added a new calendar in korganizer
selected 'calendar in remote file'

set read only
set download from to: webcal://ws.audioscrobbler.com/1.0/user/username/events.ics
(link provided on http://www.last.fm/user/username/events ; choices are an ical link or an rss link; this was the ical link)
set never reload


clicked ok

korganizer crashes
produced this backtrace:

-----------

Application: KOrganizer (korganizer), signal SIGABRT
[Current thread is 0 (LWP 8724)]

Thread 2 (Thread 0xaf07db90 (LWP 8838)):
#0  0xb7f70430 in __kernel_vsyscall ()
#1  0xb5469412 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb5da1344 in pthread_cond_timedwait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb5f8c98c in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb5f81e76 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb5f8b96e in ?? () from /usr/lib/libQtCore.so.4
#6  0xb54654ff in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb5d9249e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb4c75700 (LWP 8724)):
[KCrash Handler]
#6  0xb7f70430 in __kernel_vsyscall ()
#7  0xb5cd96d0 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb5cdb098 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb5cd25ce in __assert_fail () from /lib/tls/i686/cmov/libc.so.6
#10 0xb5a9d00c in icalerror_set_errno () from /usr/lib/libical.so.0
#11 0xb5a9537e in icalvalue_get_text () from /usr/lib/libical.so.0
#12 0xb5a8be2e in icalproperty_get_location () from /usr/lib/libical.so.0
#13 0xb7a5a660 in ?? () from /usr/lib/libkcal.so.4
#14 0xb7a5af57 in ?? () from /usr/lib/libkcal.so.4
#15 0xb7a5e339 in ?? () from /usr/lib/libkcal.so.4
#16 0xb7a5100e in KCal::ICalFormat::fromRawString () from /usr/lib/libkcal.so.4
#17 0xb7a4f4fc in KCal::ICalFormat::load () from /usr/lib/libkcal.so.4
#18 0xb7a816bf in KCal::FileStorage::load () from /usr/lib/libkcal.so.4
#19 0xb7a3c061 in KCal::CalendarLocal::load () from /usr/lib/libkcal.so.4
#20 0xb7a8edd4 in KCal::ResourceCached::loadFromCache () from /usr/lib/libkcal.so.4
#21 0xb33766b9 in KCal::ResourceRemote::slotLoadJobResult () from /usr/lib/libkcal_resourceremote.so.4
#22 0xb3376831 in KCal::ResourceRemote::qt_metacall () from /usr/lib/libkcal_resourceremote.so.4
#23 0xb6095ca8 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#24 0xb6096932 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#25 0xb62ba883 in KJob::result () from /usr/lib/libkdecore.so.5
#26 0xb62bad29 in KJob::emitResult () from /usr/lib/libkdecore.so.5
#27 0xb7079838 in KIO::FileCopyJob::slotResult () from /usr/lib/libkio.so.5
#28 0xb7076a8f in KIO::FileCopyJob::qt_metacall () from /usr/lib/libkio.so.5
#29 0xb6095ca8 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#30 0xb6096932 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#31 0xb62ba883 in KJob::result () from /usr/lib/libkdecore.so.5
#32 0xb62bad29 in KJob::emitResult () from /usr/lib/libkdecore.so.5
#33 0xb7073ab5 in KIO::SimpleJob::slotFinished () from /usr/lib/libkio.so.5
#34 0xb7074d23 in KIO::TransferJob::slotFinished () from /usr/lib/libkio.so.5
#35 0xb7075e0b in KIO::TransferJob::qt_metacall () from /usr/lib/libkio.so.5
#36 0xb6095ca8 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#37 0xb6096932 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#38 0xb7131937 in KIO::SlaveInterface::finished () from /usr/lib/libkio.so.5
#39 0xb7135677 in KIO::SlaveInterface::dispatch () from /usr/lib/libkio.so.5
#40 0xb7131e17 in KIO::SlaveInterface::dispatch () from /usr/lib/libkio.so.5
#41 0xb71221bd in KIO::Slave::gotInput () from /usr/lib/libkio.so.5
#42 0xb7124713 in KIO::Slave::qt_metacall () from /usr/lib/libkio.so.5
#43 0xb6095ca8 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#44 0xb6096932 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#45 0xb7039ea7 in KIO::Connection::readyRead () from /usr/lib/libkio.so.5
#46 0xb703b813 in ?? () from /usr/lib/libkio.so.5
#47 0xb703bbf6 in KIO::Connection::qt_metacall () from /usr/lib/libkio.so.5
#48 0xb608e8fb in QMetaCallEvent::placeMetaCall () from /usr/lib/libQtCore.so.4
#49 0xb60903a0 in QObject::event () from /usr/lib/libQtCore.so.4
#50 0xb6551f2c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#51 0xb655a22e in QApplication::notify () from /usr/lib/libQtGui.so.4
#52 0xb7da994d in KApplication::notify () from /usr/lib/libkdeui.so.5
#53 0xb607fa3b in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#54 0xb6080695 in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/libQtCore.so.4
#55 0xb608088d in QCoreApplication::sendPostedEvents () from /usr/lib/libQtCore.so.4
#56 0xb60ab7ef in ?? () from /usr/lib/libQtCore.so.4
#57 0xb515eb88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#58 0xb51620eb in ?? () from /usr/lib/libglib-2.0.so.0
#59 0xb5162268 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#60 0xb60ab438 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#61 0xb65f33f5 in ?? () from /usr/lib/libQtGui.so.4
#62 0xb607e06a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#63 0xb607e4aa in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#64 0xb6080959 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#65 0xb6551da7 in QApplication::exec () from /usr/lib/libQtGui.so.4
#66 0x080511c4 in _start ()

--------


ok bad enough, i entered something it did not like and it crashed. the bigger problem though is that now i cannot get it started again without manually removing this calendar source from the config file;

without changing any files, just clicking the shortcut again:
crash with the following backtrack:

--------
Application: KOrganizer (korganizer), signal SIGABRT

Thread 1 (Thread 0xb4d50700 (LWP 8920)):
[KCrash Handler]
#6  0xb804b430 in __kernel_vsyscall ()
#7  0xb5db46d0 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb5db6098 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb5dad5ce in __assert_fail () from /lib/tls/i686/cmov/libc.so.6
#10 0xb5b7800c in icalerror_set_errno () from /usr/lib/libical.so.0
#11 0xb5b7037e in icalvalue_get_text () from /usr/lib/libical.so.0
#12 0xb5b66e2e in icalproperty_get_location () from /usr/lib/libical.so.0
#13 0xb7b35660 in ?? () from /usr/lib/libkcal.so.4
#14 0xb7b35f57 in ?? () from /usr/lib/libkcal.so.4
#15 0xb7b39339 in ?? () from /usr/lib/libkcal.so.4
#16 0xb7b2c00e in KCal::ICalFormat::fromRawString () from /usr/lib/libkcal.so.4
#17 0xb7b2a4fc in KCal::ICalFormat::load () from /usr/lib/libkcal.so.4
#18 0xb7b5c6bf in KCal::FileStorage::load () from /usr/lib/libkcal.so.4
#19 0xb7b17061 in KCal::CalendarLocal::load () from /usr/lib/libkcal.so.4
#20 0xb7b69dd4 in KCal::ResourceCached::loadFromCache () from /usr/lib/libkcal.so.4
#21 0xb3451fcb in KCal::ResourceRemote::doLoad () from /usr/lib/libkcal_resourceremote.so.4
#22 0xb7b6ae2c in KCal::ResourceCached::load () from /usr/lib/libkcal.so.4
#23 0xb7b6b2b5 in KCal::ResourceCached::load () from /usr/lib/libkcal.so.4
#24 0xb7b72821 in KCal::CalendarResources::load () from /usr/lib/libkcal.so.4
#25 0x08053385 in _start ()

--------

i cannot get back into korganizer until i remove the link (i removed this entire resource):
[Resource_????????]
DownloadUrl=webcal://ws.audioscrobbler.com/1.0/user/username/events.ics

in the the ~/.kde/share/config/kresources/calendar/stdrc file

once removed korganizer could be started again.

took me a while grepping through the .kde/share/config settings to find the entry. even if the url was invalid, i think it would have been nice to have been notified of that in korganizer and allowed to edit/remove the url from there.
Comment 1 20120808_bugs.kde.org 2009-05-03 15:00:01 UTC
switching the url provided by lastfm from

webcal://ws.audioscrobbler.com/1.0/user/username/events.ics
to
http://ws.audioscrobbler.com/1.0/user/username/events.ics

(which could be downloaded with konqueror or wget)

added to korganizer as a new calendar, korganizer crashed again, produced the following backtrace:

------

Application: KOrganizer (korganizer), signal SIGABRT
[Current thread is 0 (LWP 9409)]

Thread 2 (Thread 0xaf0a5b90 (LWP 9517)):
#0  0xb7fa9430 in __kernel_vsyscall ()
#1  0xb54a2412 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb5dda344 in pthread_cond_timedwait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb5fc598c in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb5fbae76 in ?? () from /usr/lib/libQtCore.so.4
#5  0xb5fc496e in ?? () from /usr/lib/libQtCore.so.4
#6  0xb549e4ff in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb5dcb49e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb4cae700 (LWP 9409)):
[KCrash Handler]
#6  0xb7fa9430 in __kernel_vsyscall ()
#7  0xb5d126d0 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb5d14098 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb5d0b5ce in __assert_fail () from /lib/tls/i686/cmov/libc.so.6
#10 0xb5ad600c in icalerror_set_errno () from /usr/lib/libical.so.0
#11 0xb5ace37e in icalvalue_get_text () from /usr/lib/libical.so.0
#12 0xb5ac4e2e in icalproperty_get_location () from /usr/lib/libical.so.0
#13 0xb7a93660 in ?? () from /usr/lib/libkcal.so.4
#14 0xb7a93f57 in ?? () from /usr/lib/libkcal.so.4
#15 0xb7a97339 in ?? () from /usr/lib/libkcal.so.4
#16 0xb7a8a00e in KCal::ICalFormat::fromRawString () from /usr/lib/libkcal.so.4
#17 0xb7a884fc in KCal::ICalFormat::load () from /usr/lib/libkcal.so.4
#18 0xb7aba6bf in KCal::FileStorage::load () from /usr/lib/libkcal.so.4
#19 0xb7a75061 in KCal::CalendarLocal::load () from /usr/lib/libkcal.so.4
#20 0xb7ac7dd4 in KCal::ResourceCached::loadFromCache () from /usr/lib/libkcal.so.4
#21 0xaf0ad6b9 in KCal::ResourceRemote::slotLoadJobResult () from /usr/lib/libkcal_resourceremote.so.4
#22 0xaf0ad831 in KCal::ResourceRemote::qt_metacall () from /usr/lib/libkcal_resourceremote.so.4
#23 0xb60ceca8 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#24 0xb60cf932 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#25 0xb62f3883 in KJob::result () from /usr/lib/libkdecore.so.5
#26 0xb62f3d29 in KJob::emitResult () from /usr/lib/libkdecore.so.5
#27 0xb70b2838 in KIO::FileCopyJob::slotResult () from /usr/lib/libkio.so.5
#28 0xb70afa8f in KIO::FileCopyJob::qt_metacall () from /usr/lib/libkio.so.5
#29 0xb60ceca8 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#30 0xb60cf932 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#31 0xb62f3883 in KJob::result () from /usr/lib/libkdecore.so.5
#32 0xb62f3d29 in KJob::emitResult () from /usr/lib/libkdecore.so.5
#33 0xb70acab5 in KIO::SimpleJob::slotFinished () from /usr/lib/libkio.so.5
#34 0xb70add23 in KIO::TransferJob::slotFinished () from /usr/lib/libkio.so.5
#35 0xb70aee0b in KIO::TransferJob::qt_metacall () from /usr/lib/libkio.so.5
#36 0xb60ceca8 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#37 0xb60cf932 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#38 0xb716a937 in KIO::SlaveInterface::finished () from /usr/lib/libkio.so.5
#39 0xb716e677 in KIO::SlaveInterface::dispatch () from /usr/lib/libkio.so.5
#40 0xb716ae17 in KIO::SlaveInterface::dispatch () from /usr/lib/libkio.so.5
#41 0xb715b1bd in KIO::Slave::gotInput () from /usr/lib/libkio.so.5
#42 0xb715d713 in KIO::Slave::qt_metacall () from /usr/lib/libkio.so.5
#43 0xb60ceca8 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#44 0xb60cf932 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#45 0xb7072ea7 in KIO::Connection::readyRead () from /usr/lib/libkio.so.5
#46 0xb7074813 in ?? () from /usr/lib/libkio.so.5
#47 0xb7074bf6 in KIO::Connection::qt_metacall () from /usr/lib/libkio.so.5
#48 0xb60c78fb in QMetaCallEvent::placeMetaCall () from /usr/lib/libQtCore.so.4
#49 0xb60c93a0 in QObject::event () from /usr/lib/libQtCore.so.4
#50 0xb658af2c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#51 0xb659322e in QApplication::notify () from /usr/lib/libQtGui.so.4
#52 0xb7de294d in KApplication::notify () from /usr/lib/libkdeui.so.5
#53 0xb60b8a3b in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#54 0xb60b9695 in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/libQtCore.so.4
#55 0xb60b988d in QCoreApplication::sendPostedEvents () from /usr/lib/libQtCore.so.4
#56 0xb60e47ef in ?? () from /usr/lib/libQtCore.so.4
#57 0xb5197b88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#58 0xb519b0eb in ?? () from /usr/lib/libglib-2.0.so.0
#59 0xb519b268 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#60 0xb60e4438 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#61 0xb662c3f5 in ?? () from /usr/lib/libQtGui.so.4
#62 0xb60b706a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#63 0xb60b74aa in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#64 0xb60b9959 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#65 0xb658ada7 in QApplication::exec () from /usr/lib/libQtGui.so.4
#66 0x080511c4 in _start ()

------
Comment 2 Dario Andres 2009-05-03 21:51:34 UTC
There seems to be an error in the libical library:
---
#9  0xb5d0b5ce in __assert_fail () from /lib/tls/i686/cmov/libc.so.6
#10 0xb5ad600c in icalerror_set_errno () from /usr/lib/libical.so.0
#11 0xb5ace37e in icalvalue_get_text () from /usr/lib/libical.so.0
#12 0xb5ac4e2e in icalproperty_get_location () from /usr/lib/libical.so.0
---
What is your "libical" version ? Is it up-to-date ?

You can also install the "kdepim-dbg" packages in order to get a complete backtrace.

Thanks
Comment 3 20120808_bugs.kde.org 2009-05-03 23:27:16 UTC
Created attachment 33327 [details]
event ical provided by lastfm

this is the file downloaded from http://ws.audioscrobbler.com/1.0/user/username/events.ics

(username changed to protect the innocent :D )
Comment 4 20120808_bugs.kde.org 2009-05-03 23:30:05 UTC
actually if i change the url to begin with http but to something that does not exist (for example, http://ws.audioscrobbler.com/1.0/user/username/events.ics1234567890 ), korganizer loads then displays a message indicating that that particular url could not be retrieved ("the file or folder ... does not exist") - but korganizer does _not_ crash! 

(title of the ticket could be renamed)


Package: libical0
Version: 0.43-2
Comment 5 20120808_bugs.kde.org 2009-05-03 23:51:00 UTC
backtrace after adding the kdepim-dbg package:

------

Application: KOrganizer (korganizer), signal SIGABRT

Thread 1 (Thread 0xb4c77700 (LWP 10073)):
[KCrash Handler]
#6  0xb7f72430 in __kernel_vsyscall ()
#7  0xb5cdb6d0 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb5cdd098 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb5cd45ce in __assert_fail () from /lib/tls/i686/cmov/libc.so.6
#10 0xb5a9f00c in icalerror_set_errno () from /usr/lib/libical.so.0
#11 0xb5a9737e in icalvalue_get_text () from /usr/lib/libical.so.0
#12 0xb5a8de2e in icalproperty_get_location () from /usr/lib/libical.so.0
#13 0xb7a5c660 in KCal::ICalFormatImpl::readIncidence (this=0x8f0bc58, parent=0x900aa00, incidence=0x91d4780, tzlist=0x92819e8) at /build/buildd/kdepimlibs-4.2.2/kcal/icalformat_p.cpp:1518
#14 0xb7a5cf57 in KCal::ICalFormatImpl::readEvent (this=0x8f0bc58, vevent=0x900aa00, tzlist=0x92819e8) at /build/buildd/kdepimlibs-4.2.2/kcal/icalformat_p.cpp:1107
#15 0xb7a60339 in KCal::ICalFormatImpl::populate (this=0x8f0bc58, cal=0x92321f0, calendar=0x917e980) at /build/buildd/kdepimlibs-4.2.2/kcal/icalformat_p.cpp:2416
#16 0xb7a5300e in KCal::ICalFormat::fromRawString (this=0xbf88dc98, cal=0x92321f0, string=@0xbf88dc28) at /build/buildd/kdepimlibs-4.2.2/kcal/icalformat.cpp:188
#17 0xb7a514fc in KCal::ICalFormat::load (this=0xbf88dc98, calendar=0x92321f0, fileName=@0x92185e0) at /build/buildd/kdepimlibs-4.2.2/kcal/icalformat.cpp:106
#18 0xb7a836bf in KCal::FileStorage::load (this=0xbf88dce0) at /build/buildd/kdepimlibs-4.2.2/kcal/filestorage.cpp:119
#19 0xb7a3e061 in KCal::CalendarLocal::load (this=0x92321f0, fileName=@0xbf88dd14, format=0x0) at /build/buildd/kdepimlibs-4.2.2/kcal/calendarlocal.cpp:123
#20 0xb7a90dd4 in KCal::ResourceCached::loadFromCache (this=0x91c6b38) at /build/buildd/kdepimlibs-4.2.2/kcal/resourcecached.cpp:448
#21 0xb335efcb in KCal::ResourceRemote::doLoad (this=0x91c6b38, syncCache=true) at /build/buildd/kdepim-4.2.2/kresources/remote/resourceremote.cpp:187
#22 0xb7a91e2c in KCal::ResourceCached::load (this=0x91c6b38, action=KCal::ResourceCached::SyncCache) at /build/buildd/kdepimlibs-4.2.2/kcal/resourcecached.cpp:409
#23 0xb7a922b5 in KCal::ResourceCached::load (this=0x91c6b38) at /build/buildd/kdepimlibs-4.2.2/kcal/resourcecached.cpp:437
#24 0xb7a99821 in KCal::CalendarResources::load (this=0x913c258) at /build/buildd/kdepimlibs-4.2.2/kcal/calendarresources.cpp:275
#25 0x08053385 in KOrganizerApp::processCalendar (this=0xbf88eaec, url=@0xbf88df90) at /build/buildd/kdepim-4.2.2/korganizer/koapp.cpp:146
#26 0x080537d2 in KOrganizerApp::newInstance (this=0xbf88eaec) at /build/buildd/kdepim-4.2.2/korganizer/koapp.cpp:93
#27 0xb7db4e66 in KUniqueApplicationAdaptor::newInstance (this=0x8c1c548, asn_id=@0x8bf6a40, args=@0x8c28300) at /build/buildd/kde4libs-4.2.2/kdeui/kernel/kuniqueapplication_p.h:77
#28 0xb7db305e in KUniqueApplicationAdaptor::qt_metacall (this=0x8c1c548, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbf88e218)
    at /build/buildd/kde4libs-4.2.2/obj-i486-linux-gnu/kdeui/kuniqueapplication_p.moc:75
#29 0xb619ad7a in QDBusConnectionPrivate::deliverCall (this=0x8bb8ee8, object=0x8c1c548, msg=@0x8c282c8, metaTypes=@0xbf88e2c8, slotIdx=4) at qdbusintegrator.cpp:891
#30 0xb619bf92 in QDBusConnectionPrivate::activateCall (this=0x8bb8ee8, object=0x8c1c548, flags=337, msg=@0x8c282c8) at qdbusintegrator.cpp:796
#31 0xb619c501 in QDBusConnectionPrivate::activateObject (this=0x8bb8ee8, node=@0x8c282b4, msg=@0x8c282c8, pathStartPos=16) at qdbusintegrator.cpp:1375
#32 0xb619c9fa in QDBusActivateObjectEvent::placeMetaCall (this=0x8c28288) at qdbusintegrator.cpp:1469
#33 0xb60923a0 in QObject::event (this=0xbf88eaec, e=0x8c28288) at kernel/qobject.cpp:1118
#34 0xb60813db in QCoreApplication::event (this=0xbf88eaec, e=0x8c28288) at kernel/qcoreapplication.cpp:1426
#35 0xb6557409 in QApplication::event (this=0xbf88eaec, e=0x8c28288) at kernel/qapplication.cpp:2334
#36 0xb6553f2c in QApplicationPrivate::notify_helper (this=0x8bc76f0, receiver=0xbf88eaec, e=0x8c28288) at kernel/qapplication.cpp:4084
#37 0xb655c22e in QApplication::notify (this=0xbf88eaec, receiver=0xbf88eaec, e=0x8c28288) at kernel/qapplication.cpp:3631
#38 0xb7dab94d in KApplication::notify (this=0xbf88eaec, receiver=0xbf88eaec, event=0x8c28288) at /build/buildd/kde4libs-4.2.2/kdeui/kernel/kapplication.cpp:307
#39 0xb6081a3b in QCoreApplication::notifyInternal (this=0xbf88eaec, receiver=0xbf88eaec, event=0x8c28288) at kernel/qcoreapplication.cpp:602
#40 0xb6082695 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8b9f1b0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#41 0xb608288d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1132
#42 0xb60ad7ef in postEventSourceDispatch (s=0x8bc98a0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#43 0xb5160b88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#44 0xb51640eb in ?? () from /usr/lib/libglib-2.0.so.0
#45 0xb5164268 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#46 0xb60ad438 in QEventDispatcherGlib::processEvents (this=0x8ba3bf0, flags={i = -1081546248}) at kernel/qeventdispatcher_glib.cpp:323
#47 0xb65f53f5 in QGuiEventDispatcherGlib::processEvents (this=0x8ba3bf0, flags={i = -1081546200}) at kernel/qguieventdispatcher_glib.cpp:202
#48 0xb608006a in QEventLoop::processEvents (this=0xbf88eaa0, flags={i = -1081546136}) at kernel/qeventloop.cpp:149
#49 0xb60804aa in QEventLoop::exec (this=0xbf88eaa0, flags={i = -1081546072}) at kernel/qeventloop.cpp:200
#50 0xb6082959 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:880
#51 0xb6553da7 in QApplication::exec () at kernel/qapplication.cpp:3553
#52 0x080511c4 in main (argc=) at /build/buildd/kdepim-4.2.2/korganizer/main.cpp:59



------
Comment 6 Allen Winter 2009-05-30 22:43:17 UTC
ok, at least I know that the crash is caused by the VENUE-UID custom parameter in the LOCATION lines.  That's against the RFC, because a custom parameter must start with "X-"

if I replace the VENUE-UID with X-VENUE-UID then there is no crash.

So 2 bugs here: 1) lastfm isn't creating propery iCal files 2) the libical library is crashing on the improper custom parameter -- it shouldn't crash.

I'll see what I can do to help fix 2.
Comment 7 Allen Winter 2009-05-31 02:15:41 UTC
SVN commit 975759 by winterz:

Don't crash for bad LOCATION property values.
This is actually a bug caused by a libical being overly aggressive in its error checking.

So we pre-check the value before going into libical to parse the LOCATION.

BUG: 191472



 M  +6 -0      icalformat_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=975759
Comment 8 20120808_bugs.kde.org 2009-05-31 11:36:10 UTC
reported the issue to lastfm
http://www.last.fm/forum/21713/_/538314