Don't crash for bad LOCATION property values. This is actually a bug caused by a libical being overly aggressive in its error checking.

So we pre-check the value before going into libical to parse the LOCATION.

BUG: 191472


svn path=/trunk/KDE/kdepimlibs/; revision=975759